UserGuide updates: - added infocard with labels - update figure numbers
Update PPP

--- a/docs/team/lzf834.md
+++ b/docs/team/lzf834.md
@@ -4,7 +4,10 @@ title: Zi Foong's Project Portfolio Page
 ---
 
 ### Project: Ultimate Divoc Tracker
-Ultimate Divoc Tracker is a desktop app for managing COVID-19 contacts in school admin, optimized for use via a Command Line Interface (CLI) while still having the benefits of a Graphical User Interface (GUI). If you can type fast, Ultimate DivocTracker can get your contact management tasks done faster than traditional GUI apps.
+**Ultimate DivocTracker _(UDT)_** is a desktop app for managing COVID-19 contacts in school administration, optimized for use via interacting with the application through easy-to-use commands on a user-centric interface.
+Ultimate Divoc Tracker can get your contact-tracing tasks done faster than traditional GUI apps.
+
+School administrators _(like teachers)_ in charge of managing COVID-19 can use UDT to easily track COVID-19 cases amongst the student population with ease and concentrate on what matters most, the education of the students.
 
 Given below are my contributions to the project.
 * **New Feature**: Status attribute for persons: `Status` -- (Pull Request [\#32](https://github.com/AY2122S2-CS2103T-T12-1/tp/pull/32))
@@ -23,12 +26,10 @@ Given below are my contributions to the project.
   * Justification: Track students who are participating in the same particular `Activity`
   * Credits: *{Collaborators: Yong Rui, Zi Foong}*
 
-* **Code contributed**: [RepoSense link]()
-* **Project management**:
-  * Managed releases `To be added soon`
+* **Code contributed**: [RepoSense link](https://nus-cs2103-ay2122s2.github.io/tp-dashboard/?search=lzf834&breakdown=true&sort=groupTitle&sortWithin=title&since=2022-02-18&timeframe=commit&mergegroup=&groupSelect=groupByRepos&checkedFileTypes=docs~functional-code~test-code~other)
 * **Enhancements to existing features**:
   * UI changes: Making `Status` attribute more prominent [\#100](https://github.com/AY2122S2-CS2103T-T12-1/tp/pull/100)
-  * `To be added soon`
+  * Set character limit to Phone Number attribute [\#168](https://github.com/AY2122S2-CS2103T-T12-1/tp/pull/168)
 * **Documentation**:
   * User Guide:
     * Update AboutUs.md [\#18](https://github.com/AY2122S2-CS2103T-T12-1/tp/pull/18)
@@ -41,6 +42,11 @@ Given below are my contributions to the project.
       * Added captions to images used in UG
       * Added GUI/CLI and brief intro of the application
       * Add red box for edit command figure to highlight the student changed
+    * Bug Fixes for issues raised from TP-D [\#164](https://github.com/AY2122S2-CS2103T-T12-1/tp/pull/164)
+      * Added `clear` command and details into UserGuide
+      * Removed empty tip box
+      * Grammar issues
+    * Bug Fixes for div where `>` constantly appeared erroneously [\#168](https://github.com/AY2122S2-CS2103T-T12-1/tp/pull/168)
   * Developer Guide:
     * Edited Glossary
     * Added User Profile, User Stories and Value Prepositions [\#25](https://github.com/AY2122S2-CS2103T-T12-1/tp/pull/25)
@@ -54,7 +60,7 @@ Given below are my contributions to the project.
     * DeveloperGuide.md updates by [Yong Rui](https://github.com/Fenway17) [\#96](https://github.com/AY2122S2-CS2103T-T12-1/tp/pull/96)
     * UserGuide.md changes by [Yong Rui](https://github.com/Fenway17) [\#104](https://github.com/AY2122S2-CS2103T-T12-1/tp/pull/104)
     * Add images for features [\#106](https://github.com/AY2122S2-CS2103T-T12-1/tp/pull/106)
-    * Updated userguide.md and changed application top bar [\#109](https://github.com/AY2122S2-CS2103T-T12-1/tp/pull/109)
+    * Updated UserGuide.md and changed application top bar [\#109](https://github.com/AY2122S2-CS2103T-T12-1/tp/pull/109)
     * Enhance UI [\#116](https://github.com/AY2122S2-CS2103T-T12-1/tp/pull/116)
     * Fix batch update edge cases for AddCommand and DeleteCommand [\#118](https://github.com/AY2122S2-CS2103T-T12-1/tp/pull/118)
 * **Test Cases**:
