Update DG: - findactivity

--- a/docs/team/lzf834.md
+++ b/docs/team/lzf834.md
@@ -16,29 +16,36 @@ Given below are my contributions to the project.
   * Highlights: `Status` can be `Positive`, `Negative` or `Close-Contact`
   * Credits: *{Collaborators: Yong Rui, Zi Foong}*
 
+
 * **New Feature**: Find Students by their Covid-19 Status: `findstatus` -- (Pull Request [\#55](https://github.com/AY2122S2-CS2103T-T12-1/tp/pull/55))
   * What it does: Allows the user to find students by their status
   * Justification: Track students with specific statuses e.g. `Positive` or `Close-Contact`
   * Credits: *{Collaborators: Yong Rui, Zi Foong}*
+
 
 * **New Feature**: Find Students by the Activities they have participated in: `findactivity` -- (Pull Request [\#83](https://github.com/AY2122S2-CS2103T-T12-1/tp/pull/83))
   * What it does: Allows the user to find students by their activities they are participating in (e.g. Being the Badminton CCA)
   * Justification: Track students who are participating in the same particular `Activity`
   * Credits: *{Collaborators: Yong Rui, Zi Foong}*
 
+
 * **Code contributed**: [RepoSense link](https://nus-cs2103-ay2122s2.github.io/tp-dashboard/?search=lzf834&breakdown=true&sort=groupTitle&sortWithin=title&since=2022-02-18&timeframe=commit&mergegroup=&groupSelect=groupByRepos&checkedFileTypes=docs~functional-code~test-code~other)
+
+
 * **Enhancements to existing features**:
   * UI changes: Making `Status` attribute more prominent [\#100](https://github.com/AY2122S2-CS2103T-T12-1/tp/pull/100)
   * Set character limit to Phone Number attribute [\#168](https://github.com/AY2122S2-CS2103T-T12-1/tp/pull/168)
+
+
 * **Documentation**:
+  * Update AboutUs.md [\#40](https://github.com/AY2122S2-CS2103T-T12-1/tp/pull/40)
+  * Update Readme.md [\#40](https://github.com/AY2122S2-CS2103T-T12-1/tp/pull/40)
   * User Guide:
-    * Update AboutUs.md [\#18](https://github.com/AY2122S2-CS2103T-T12-1/tp/pull/18)
-    * Update Readme.md [\#18](https://github.com/AY2122S2-CS2103T-T12-1/tp/pull/18)
     * Update for new features `findstatus` and `findclasscode` [\#63](https://github.com/AY2122S2-CS2103T-T12-1/tp/pull/63)
     * Correction for certain features stated in UserGuide and specificity for commands [\#105](https://github.com/AY2122S2-CS2103T-T12-1/tp/pull/105)
     * Add Introduction and Minor fixes to terms [\#107](https://github.com/AY2122S2-CS2103T-T12-1/tp/pull/107)
     * Bug Fixes and Image/Captions [\#114](https://github.com/AY2122S2-CS2103T-T12-1/tp/pull/114)
-      * Fixed AB3 issue during ctrl+p of github pages
+      * Fixed AB3 issue during `ctrl+p` of github pages
       * Added captions to images used in UG
       * Added GUI/CLI and brief intro of the application
       * Add red box for edit command figure to highlight the student changed
@@ -52,6 +59,8 @@ Given below are my contributions to the project.
     * Added User Profile, User Stories and Value Prepositions [\#25](https://github.com/AY2122S2-CS2103T-T12-1/tp/pull/25)
     * Added QuickLinks and Table of Content [\#84](https://github.com/AY2122S2-CS2103T-T12-1/tp/pull/84)
     * Features `Status`, `FindByStatus` and `Activity` implementation [\#91](https://github.com/AY2122S2-CS2103T-T12-1/tp/pull/91)
+
+
 * **Community**:
   * PRs reviewed (with non-trivial review comments): 
     * JUnit Tests for `findactivity` method [\#86](https://github.com/AY2122S2-CS2103T-T12-1/tp/pull/86)
@@ -63,6 +72,8 @@ Given below are my contributions to the project.
     * Updated UserGuide.md and changed application top bar [\#109](https://github.com/AY2122S2-CS2103T-T12-1/tp/pull/109)
     * Enhance UI [\#116](https://github.com/AY2122S2-CS2103T-T12-1/tp/pull/116)
     * Fix batch update edge cases for AddCommand and DeleteCommand [\#118](https://github.com/AY2122S2-CS2103T-T12-1/tp/pull/118)
+
+
 * **Test Cases**:
   * Implement JUnit Tests for updated `Edit` Command [\#69](https://github.com/AY2122S2-CS2103T-T12-1/tp/pull/69)
   * Updated Test Cases for Activity and Activity-related functions [\#79](https://github.com/AY2122S2-CS2103T-T12-1/tp/pull/79)
