--- a/docs/team/lzf834.md
+++ b/docs/team/lzf834.md
@@ -34,7 +34,8 @@ Given below are my contributions to the project.
 
 * **Enhancements to existing features**:
   * UI changes: Making `Status` attribute more prominent [\#100](https://github.com/AY2122S2-CS2103T-T12-1/tp/pull/100)
-  * Set character limit to Phone Number attribute [\#168](https://github.com/AY2122S2-CS2103T-T12-1/tp/pull/168)
+  * Set character limit to `Phone` attribute [\#168](https://github.com/AY2122S2-CS2103T-T12-1/tp/pull/168)
+  * Set character limits to `Activity`, `Address`, `Name` attributes
 
 
 * **Documentation**:
@@ -54,11 +55,13 @@ Given below are my contributions to the project.
       * Removed empty tip box
       * Grammar issues
     * Bug Fixes for div where `>` constantly appeared erroneously [\#168](https://github.com/AY2122S2-CS2103T-T12-1/tp/pull/168)
+    * New images of information card with labels to explain GUI [\#177](https://github.com/AY2122S2-CS2103T-T12-1/tp/pull/177)
   * Developer Guide:
     * Edited Glossary
     * Added User Profile, User Stories and Value Prepositions [\#25](https://github.com/AY2122S2-CS2103T-T12-1/tp/pull/25)
     * Added QuickLinks and Table of Content [\#84](https://github.com/AY2122S2-CS2103T-T12-1/tp/pull/84)
-    * Features `Status`, `FindByStatus` and `Activity` implementation [\#91](https://github.com/AY2122S2-CS2103T-T12-1/tp/pull/91)
+    * Features `Status`, `findstatus` and `Activity` implementation [\#91](https://github.com/AY2122S2-CS2103T-T12-1/tp/pull/91)
+    * `findactivity` implementation alternative [\#177](https://github.com/AY2122S2-CS2103T-T12-1/tp/pull/177)
 
 
 * **Community**:
@@ -77,3 +80,4 @@ Given below are my contributions to the project.
 * **Test Cases**:
   * Implement JUnit Tests for updated `Edit` Command [\#69](https://github.com/AY2122S2-CS2103T-T12-1/tp/pull/69)
   * Updated Test Cases for Activity and Activity-related functions [\#79](https://github.com/AY2122S2-CS2103T-T12-1/tp/pull/79)
+  * Implement Test Cases for `Activity`, `Address`, `Name`, `Status`, `Phone`  attributes which are too short/long to prevent over-the-top inputs from Users [\#181](https://github.com/AY2122S2-CS2103T-T12-1/tp/pull/181)
