--- a/docs/team/cwq2326.md
+++ b/docs/team/cwq2326.md
@@ -5,39 +5,46 @@ title: Chua Wen Quan's Project Portfolio Page
 
 ### Project: Tracey
 
-Tracey is a desktop address book application used for teaching Software Engineering principles. The user interacts with it using a CLI, and it has a GUI created with JavaFX. It is written in Java, and has about 10 kLoC.
+Tracey is a desktop app for managing health statuses of NUS Hall Residents. The user interacts with it using a CLI, and it has a GUI created with JavaFX. It is written in Java, and has about 10 kLoC.
 
 Given below are my contributions to the project.
 
-* **New Feature**: Added the ability to undo/redo previous commands.
-  * What it does: allows the user to undo all previous commands one at a time. Preceding undo commands can be reversed by using the redo command.
-  * Justification: This feature improves the product significantly because a user can make mistakes in commands and the app should provide a convenient way to rectify them.
-  * Highlights: This enhancement affects existing commands and commands to be added in future. It required an in-depth analysis of design alternatives. The implementation too was challenging as it required changes to existing commands.
-  * Credits: *{mention here if you reused any code/ideas from elsewhere or if a third-party library is heavily used in the feature so that a reader can make a more accurate judgement of how much effort went into the feature}*
+* **New Feature**: Added the ability archive the database.
+  * What it does: This allows the user to save a copy of the current working database. The archived file will be saved in a separate directory ordered by date for easy retrieval.
+  * Justification: This feature allows the user to safely preserve the current working database, which might be valuable to any party of interest or kept for future reference.
+  * Highlights: The format of the name of the archived file is design in such a way whereby it is unique to all archived files. In other words, no two archived files have the same name.
 
-* **New Feature**: Added a history command that allows the user to navigate to previous commands using up/down keys.
+* **New Feature**: Added the ability to resize the result display window via the command line interface or toggling the button.
+  * What it does: This allows the user to resize the result display window according to three pre-set size.
+  * Justification: This feature allows the user to resize the result display window to their preference, and is especially useful if the user's application window size is small or for commands that return long result display text.
 
-* **Code contributed**: [RepoSense link]()
+* **New Feature**: Added the initial implementation of the pie chart window for the summarise feature.
+  * What it does: The pie chart window will show an overview of the covid statuses of NUS hall residence from different hall blocks and faculties.
+  * Justification: This feature provides the user an easy way to obtain an overview analysis of the covid status of residence residing in his/her hall with just a single command.
+  * Highlights: Implemented two methods of obtaining the data needed for the pie chart, one of which is to parse the result display from the summarise feature and the other is using data structures to pass the data. Ultimately went with the latter decision as it is easier to scale up if there is a need to use data for additional attributes.
+  
+* **Code contributed**: [RepoSense link](https://nus-cs2103-ay2122s2.github.io/tp-dashboard/?search=cwq2326&breakdown=true&sort=groupTitle&sortWithin=title&since=2022-02-18&timeframe=commit&mergegroup=&groupSelect=groupByRepos&checkedFileTypes=docs~functional-code~test-code~other)
 
 * **Project management**:
-  * Managed releases `v1.3` - `v1.5rc` (3 releases) on GitHub
+  * Managed releases `v1.3b (1 releases) on GitHub
 
 * **Enhancements to existing features**:
-  * Updated the GUI color scheme (Pull requests [\#33](), [\#34]())
+  * Added three additional attributes for the student (Faculty, Matriculation Number and Covid Status) (Pull requests [\#33](), [\#34]())
   * Wrote additional tests for existing features to increase coverage from 88% to 92% (Pull requests [\#36](), [\#38]())
+  * Limited the number of characters for name and tags
+  * Added a badge for each student that will show their covid status, and is color coded accordingly
+  * Morphed the display message for adding a duplicate student to include displaying the unique attributes of the student to be added that are already present in the application's database.
 
 * **Documentation**:
   * User Guide:
-    * Added documentation for the features `delete` and `find` [\#72]()
+    * Added documentation for the features `archive` and `resize` [\#72]()
+    * Added Tips, warnings and notes for features
     * Did cosmetic tweaks to existing documentation of features `clear`, `exit`: [\#74]()
   * Developer Guide:
-    * Added implementation details of the `delete` feature.
+    * Added implementation details of the `add`, `pieChartWindow`, `archive`, `edit`, `resize` feature.
 
 * **Community**:
   * PRs reviewed (with non-trivial review comments): [\#12](), [\#32](), [\#19](), [\#42]()
-  * Contributed to forum discussions (examples: [1](), [2](), [3](), [4]())
-  * Reported bugs and suggestions for other teams in the class (examples: [1](), [2](), [3]())
-  * Some parts of the history feature I added was adopted by several other class mates ([1](), [2]())
 
 * **Tools**:
   * Integrated a third party library (Natty) to the project ([\#42]())
