--- a/docs/team/mazx4960.md
+++ b/docs/team/mazx4960.md
@@ -9,22 +9,36 @@ IBook is an inventory recording system for storekeepers to manage incoming and o
 
 Given below are my contributions to the project.
 
-* **New Feature**: to be added soon
-
-* **New Feature**: to be added soon
-
 * **Code contributed**: [RepoSense link](https://nus-cs2103-ay2122s2.github.io/tp-dashboard/?search=mazx4960&breakdown=true)
 
-* **Project management**: to be added soon
+* **New Feature**: Add product command
+  * What it does: Allows the user to add a new product to iBook.
+  * Justification: Provides an easy way to track all the products that the shopkeeper has in the store.
 
-* **Enhancements to existing features**: to be added soon
+* **New Feature**: Delete product command
+  * What it does: Allows the user to delete an existing product from iBook.
+  * Justification: Some products might no longer be selling in the store, hence, this command provides an easy way to remove it.
+
+* **New Feature**: Added the ability to have multiple items for a product
+  * What it does: Allows the user to add items to a product.
+  * Justification: Different items might have different expiry dates. This allows the user to keep track of these items separately in an organised manner.
+
+* **New Feature**: Product filter
+  * What it does: Allows the user to filter the products based on different parameters like their name, category etc, and display the current applied filter in the user interface.
+  * Justification: The storekeeper might have a lot of items in the application, this filter allows him to find products that he is looking for and display it in the user interface.
+
+* **Enhancements to existing features**: Find Command
+  * What it does: Allows a more general search of the products, by allowing partial matching of the name or category as well as finding a range of prices.
+  * Justification: The storekeeper might not remember the exact name of the product that he is looking for, and this provides a convenient way for him to do so.
 
 * **Documentation**:
-    * User Guide:
-      to be added soon
-    * Developer Guide:
-      to be added soon
+  * User Guide:
+    * Wrote documentation for the `add`, `delete` commands.
+    * Formatted the user guide to flow better
+  * Developer Guide:
+    * Added the `item` into the model diagram
+    * Added use cases
 
 * **Community**: to be added soon
-
-* **Tools**: to be added soon
+  * Reviewed PRs and suggested improvements
+  * Reported bugs founds and suggested solutions
