--- a/docs/team/lzf834.md
+++ b/docs/team/lzf834.md
@@ -33,51 +33,51 @@ Given below are my contributions to the project.
 
 
 * **Enhancements to existing features**:
-  * UI changes: Making `Status` attribute more prominent [\#100](https://github.com/AY2122S2-CS2103T-T12-1/tp/pull/100)
-  * Set character limit to `Phone` attribute [\#168](https://github.com/AY2122S2-CS2103T-T12-1/tp/pull/168)
-  * Set character limits to `Activity`, `Address`, `Name` attributes
+  * UI changes: Making `Status` attribute more prominent -- (Pull Request [\#100](https://github.com/AY2122S2-CS2103T-T12-1/tp/pull/100))
+  * Set character limit to `Phone` attribute -- (Pull Request [\#168](https://github.com/AY2122S2-CS2103T-T12-1/tp/pull/168))
+  * Set character limits to `Activity`, `Address`, `Name` attributes (Pull Request [\#180](https://github.com/AY2122S2-CS2103T-T12-1/tp/pull/180))
 
 
 * **Documentation**:
-  * Update AboutUs.md [\#40](https://github.com/AY2122S2-CS2103T-T12-1/tp/pull/40)
-  * Update Readme.md [\#40](https://github.com/AY2122S2-CS2103T-T12-1/tp/pull/40)
+  * Update AboutUs.md -- (Pull Request [\#40](https://github.com/AY2122S2-CS2103T-T12-1/tp/pull/40))
+  * Update Readme.md -- (Pull Request [\#40](https://github.com/AY2122S2-CS2103T-T12-1/tp/pull/40))
   * User Guide:
-    * Update for new features `findstatus` and `findclasscode` [\#63](https://github.com/AY2122S2-CS2103T-T12-1/tp/pull/63)
-    * Correction for certain features stated in UserGuide and specificity for commands [\#105](https://github.com/AY2122S2-CS2103T-T12-1/tp/pull/105)
-    * Add Introduction and Minor fixes to terms [\#107](https://github.com/AY2122S2-CS2103T-T12-1/tp/pull/107)
-    * Bug Fixes and Image/Captions [\#114](https://github.com/AY2122S2-CS2103T-T12-1/tp/pull/114)
+    * Update for new features `findstatus` and `findclasscode` -- (Pull Request [\#63](https://github.com/AY2122S2-CS2103T-T12-1/tp/pull/63))
+    * Correction for certain features stated in UserGuide and specificity for commands -- (Pull Request [\#105](https://github.com/AY2122S2-CS2103T-T12-1/tp/pull/105))
+    * Add Introduction and Minor fixes to terms -- (Pull Request [\#107](https://github.com/AY2122S2-CS2103T-T12-1/tp/pull/107))
+    * Bug Fixes and Image/Captions -- (Pull Request [\#114](https://github.com/AY2122S2-CS2103T-T12-1/tp/pull/114))
       * Fixed AB3 issue during `ctrl+p` of github pages
       * Added captions to images used in UG
       * Added GUI/CLI and brief intro of the application
       * Add red box for edit command figure to highlight the student changed
-    * Bug Fixes for issues raised from TP-D [\#164](https://github.com/AY2122S2-CS2103T-T12-1/tp/pull/164)
+    * Bug Fixes for issues raised from TP-D -- (Pull Request [\#164](https://github.com/AY2122S2-CS2103T-T12-1/tp/pull/164))
       * Added `clear` command and details into UserGuide
       * Removed empty tip box
       * Grammar issues
-    * Bug Fixes for div where `>` constantly appeared erroneously [\#168](https://github.com/AY2122S2-CS2103T-T12-1/tp/pull/168)
-    * New images of information card with labels to explain GUI [\#177](https://github.com/AY2122S2-CS2103T-T12-1/tp/pull/177)
+    * Bug Fixes for div where `>` constantly appeared erroneously -- (Pull Request [\#168](https://github.com/AY2122S2-CS2103T-T12-1/tp/pull/168))
+    * New images of information card with labels to explain GUI -- (Pull Request [\#177](https://github.com/AY2122S2-CS2103T-T12-1/tp/pull/177))
   * Developer Guide:
     * Edited Glossary
-    * Added User Profile, User Stories and Value Prepositions [\#25](https://github.com/AY2122S2-CS2103T-T12-1/tp/pull/25)
-    * Added QuickLinks and Table of Content [\#84](https://github.com/AY2122S2-CS2103T-T12-1/tp/pull/84)
-    * Features `Status`, `findstatus` and `Activity` implementation [\#91](https://github.com/AY2122S2-CS2103T-T12-1/tp/pull/91)
-    * `findactivity` implementation alternative [\#177](https://github.com/AY2122S2-CS2103T-T12-1/tp/pull/177)
+    * Added User Profile, User Stories and Value Prepositions -- (Pull Request [\#25](https://github.com/AY2122S2-CS2103T-T12-1/tp/pull/25))
+    * Added QuickLinks and Table of Content -- (Pull Request [\#84](https://github.com/AY2122S2-CS2103T-T12-1/tp/pull/84))
+    * Features `Status`, `findstatus` and `Activity` implementation -- (Pull Request [\#91](https://github.com/AY2122S2-CS2103T-T12-1/tp/pull/91))
+    * `findactivity` implementation alternative -- (Pull Request [\#177](https://github.com/AY2122S2-CS2103T-T12-1/tp/pull/177))
 
 
 * **Community**:
   * PRs reviewed (with non-trivial review comments): 
-    * JUnit Tests for `findactivity` method [\#86](https://github.com/AY2122S2-CS2103T-T12-1/tp/pull/86)
-    * DeveloperGuide.md updates by [Jun Hong](https://github.com/whoisjunhong) for Batch Update and `ClassCode` [\#92](https://github.com/AY2122S2-CS2103T-T12-1/tp/pull/92)
-    * Logging and Exception checking for Batch Update enhancement [\#93](https://github.com/AY2122S2-CS2103T-T12-1/tp/pull/93)
-    * DeveloperGuide.md updates by [Yong Rui](https://github.com/Fenway17) [\#96](https://github.com/AY2122S2-CS2103T-T12-1/tp/pull/96)
-    * UserGuide.md changes by [Yong Rui](https://github.com/Fenway17) [\#104](https://github.com/AY2122S2-CS2103T-T12-1/tp/pull/104)
-    * Add images for features [\#106](https://github.com/AY2122S2-CS2103T-T12-1/tp/pull/106)
-    * Updated UserGuide.md and changed application top bar [\#109](https://github.com/AY2122S2-CS2103T-T12-1/tp/pull/109)
-    * Enhance UI [\#116](https://github.com/AY2122S2-CS2103T-T12-1/tp/pull/116)
-    * Fix batch update edge cases for AddCommand and DeleteCommand [\#118](https://github.com/AY2122S2-CS2103T-T12-1/tp/pull/118)
+    * JUnit Tests for `findactivity` method -- (Pull Request [\#86](https://github.com/AY2122S2-CS2103T-T12-1/tp/pull/86))
+    * DeveloperGuide.md updates by [Jun Hong](https://github.com/whoisjunhong) for Batch Update and `ClassCode` -- (Pull Request [\#92](https://github.com/AY2122S2-CS2103T-T12-1/tp/pull/92))
+    * Logging and Exception checking for Batch Update enhancement -- (Pull Request [\#93](https://github.com/AY2122S2-CS2103T-T12-1/tp/pull/93))
+    * DeveloperGuide.md updates by [Yong Rui](https://github.com/Fenway17) -- (Pull Request [\#96](https://github.com/AY2122S2-CS2103T-T12-1/tp/pull/96))
+    * UserGuide.md changes by [Yong Rui](https://github.com/Fenway17) -- (Pull Request [\#104](https://github.com/AY2122S2-CS2103T-T12-1/tp/pull/104))
+    * Add images for features -- (Pull Request [\#106](https://github.com/AY2122S2-CS2103T-T12-1/tp/pull/106))
+    * Updated UserGuide.md and changed application top bar -- (Pull Request [\#109](https://github.com/AY2122S2-CS2103T-T12-1/tp/pull/109))
+    * Enhance UI -- (Pull Request [\#116](https://github.com/AY2122S2-CS2103T-T12-1/tp/pull/116))
+    * Fix batch update edge cases for AddCommand and DeleteCommand -- (Pull Request [\#118](https://github.com/AY2122S2-CS2103T-T12-1/tp/pull/118))
 
 
 * **Test Cases**:
-  * Implement JUnit Tests for updated `Edit` Command [\#69](https://github.com/AY2122S2-CS2103T-T12-1/tp/pull/69)
-  * Updated Test Cases for Activity and Activity-related functions [\#79](https://github.com/AY2122S2-CS2103T-T12-1/tp/pull/79)
-  * Implement Test Cases for `Activity`, `Address`, `Name`, `Status`, `Phone`  attributes which are too short/long to prevent over-the-top inputs from Users [\#181](https://github.com/AY2122S2-CS2103T-T12-1/tp/pull/181)
+  * Implement JUnit Tests for updated `Edit` Command -- (Pull Request [\#69](https://github.com/AY2122S2-CS2103T-T12-1/tp/pull/69))
+  * Updated Test Cases for Activity and Activity-related functions -- (Pull Request [\#79](https://github.com/AY2122S2-CS2103T-T12-1/tp/pull/79))
+  * Implement Test Cases for `Activity`, `Address`, `Name`, `Status`, `Phone`  attributes which are too short/long to prevent over-the-top inputs from Users -- (Pull Request [\#181](https://github.com/AY2122S2-CS2103T-T12-1/tp/pull/181))
